--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/amnaelsayed/Koffer-packen#readme",
   "dependencies": {
     "chalk": "^5.0.1",
+    "gradient-string": "^2.0.1",
     "prompt-sync": "^4.2.0"
   }
 }
