--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "homepage": "https://github.com/amnaelsayed/Koffer-packen#readme",
   "dependencies": {
     "chalk": "^5.0.1",
+    "enquirer": "^2.3.6",
+    "figlet": "^1.5.2",
     "gradient-string": "^2.0.1",
+    "inquirer": "^9.1.0",
     "prompt-sync": "^4.2.0"
   }
 }
