--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/amnaelsayed/Koffer-packen#readme",
   "dependencies": {
     "chalk": "^5.0.1",
+    "chalk-animation": "^2.0.2",
     "enquirer": "^2.3.6",
     "figlet": "^1.5.2",
     "gradient-string": "^2.0.1",
