--- a/package.json
+++ b/package.json
@@ -20,17 +20,14 @@
   "homepage": "https://github.com/amnaelsayed/Koffer-packen#readme",
   "dependencies": {
     "chalk": "^5.0.1",
-<<<<<<< HEAD
-    "enquirer": "^2.3.6",
-    "figlet": "^1.5.2",
-    "gradient": "^0.2.0",
-=======
     "chalk-animation": "^2.0.2",
     "enquirer": "^2.3.6",
     "figlet": "^1.5.2",
+    "gradient": "^0.2.0",
     "gradient-string": "^2.0.1",
+    "howler": "^2.2.3",
     "inquirer": "^9.1.0",
->>>>>>> 0f9bc9dd7e9eda9b5e5fc7c139b3386a49c1402f
-    "prompt-sync": "^4.2.0"
+    "prompt-sync": "^4.2.0",
+    "require": "^2.4.20"
   }
 }
