--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/amnaelsayed/Koffer-packen#readme",
   "dependencies": {
+    "center-align": "^1.0.1",
     "chalk": "^5.0.1",
     "chalk-animation": "^2.0.2",
     "enquirer": "^2.3.6",
