check the new index.js

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "howler": "^2.2.3",
     "inquirer": "^9.1.0",
     "prompt-sync": "^4.2.0",
-    "require": "^2.4.20"
+    "require": "^2.4.20",
+    "nanospinner": "^1.1.0"
   }
 }
